refactor(core): simplify Resource resolution without ternaries